tweak(context): fixed overflow and allow scrolling

--- a/ui/main.css
+++ b/ui/main.css
@@ -3,17 +3,29 @@
     margin: 0;
 }
 
-.root-wrapper {
+#container {
     position: absolute;
-    width: 35vw;
     height: auto;
     top: 20%;
     right: 20%;
+    border-radius: 5px;
     background: transparent !important;
+}
+
+#buttons {
+    max-height: 75vh;
+    width: 35vw;
+    overflow-x: none;
+    overflow-y: auto;
+    padding: 10px;
 }
 
 html,body {
     background: transparent !important;
+}
+
+#buttons::-webkit-scrollbar {
+    display: none;
 }
 
 body::-webkit-scrollbar {
